@@ -1,3 +1,9 @@
+2001-09-01  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/shlobj.h (CFSTR_* ): Add new defines.
+	Thanks to: "Ron" <ron@debian.org> . 
+	Unicode them.
+
 Thu Aug 30 09:35:51 2001  Christopher Faylor <cgf@cygnus.com>
 
 	* include/winsock2.h: Remove "extra token" after #endif.
